fix bug in lodash template; fix bug with todos not being saved after editing;

--- a/templates/todos.html
+++ b/templates/todos.html
@@ -16,7 +16,7 @@
     checked
     <% } %>
     >
-    <span class="todo__text todo__text-js"><%- data.todos[i].text %></span>
+    <span class="todo__text todo__text-js"><%= data.todos[i].text %></span>
     <span class="todo__delete-btn-js">&times;</span>
     </li>
     <% } %>
